# spotify-juicer

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
