[tool.poetry]
name = "spotify-juicer"
version = "0.1.0"
description = ""
authors = ["yepdev <yep.dev7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
redis = "^4.2.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
